Added sign up. Top header for logged in user. Edit user info.

--- a/pizza-ordedring-app/src/main/resources/templates/categoryPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/categoryPage.html
@@ -21,6 +21,15 @@
    		<div hidden >
 		    <p th:each="category : ${itemCategories}" th:id="'categoryName' + ${category}" th:text="${category}"></p>
 		</div>
+		<!-- Listing item names to pass to JavaScript. -->
+		<div hidden>
+		    <p th:each="item : ${menuItems}" th:id="'itemName' + ${item.getItemName()}" th:text="${item.getCategory()} + ' ' + ${item.getItemName()}"></p>
+		</div>
+		<!-- Listing users account email. -->
+		<div hidden>
+		    <p id="accIsAdmin" th:text="${userIsAdmin}"></p>
+		    <span id="isUserLoggedin" th:text="${isLoggedIn}" hidden></span>
+		</div>
    		<!-- TopHeader div inserted here from JavaScript (topHeaderHtml.js) -->
 		
    		<div id="pageBody">
@@ -65,6 +74,7 @@
   </div>
 
 	<script src="/javaScript/topHeaderHtml.js"></script>
+	<script  src="/javaScript/clicksAccount.js"></script>
 
 	<script src="/javaScript/showOperatingHours.js"></script>
 	<script src="/javaScript/menuOptions/showPizzas.js"></script>
