--- a/pizza-ordedring-app/src/main/resources/templates/sign-inPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/sign-inPage.html
@@ -25,6 +25,11 @@
 		<div hidden>
 		    <p th:each="item : ${menuItems}" th:id="'itemName' + ${item.getItemName()}" th:text="${item.getCategory()} + ' ' + ${item.getItemName()}"></p>
 		</div>
+		<!-- Listing users account email. -->
+		<div hidden>
+		    <p id="accIsAdmin" th:text="${userIsAdmin}"></p>
+		    <span id="isUserLoggedin" th:text="${isLoggedIn}" hidden></span>
+		</div>
    		<!-- TopHeader div inserted here from JavaScript (topHeaderHtml.js) -->
 		
 		<span id="popup" th:text="${showError}" style="display: none;"></span>
@@ -80,6 +85,7 @@
 
 	<script src="/javaScript/topHeaderHtml.js"></script>
 	<script  src="/javaScript/showPopupError.js"></script>
+	<script  src="/javaScript/clicksAccount.js"></script>
 
 	<script src="/javaScript/showOperatingHours.js"></script>
 	<script src="/javaScript/menuOptions/showPizzas.js"></script>
