--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/backgroundAndTopBar.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/backgroundAndTopBar.css
@@ -584,6 +584,76 @@
 		
 	}
 	
+	#loggedIn {
+		width: 17%;
+		height: 60%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		
+		color: white;
+		background-color: rgb(0, 57, 230);
+		border: 2px solid black;
+		cursor: pointer;
+		
+	}
+	  #userProfileImgSpan {
+			height: 100%;
+			width: 40%;
+			align-items: center;
+	    	text-align: center;
+	    	justify-content: left;
+	   }
+		#userProfileImg {
+			display: flex;
+			width: 60px;
+			height: 60px;
+			
+			align-items: center;
+	    	text-align: center;
+	    	justify-content: center;
+		}
+			#hiddenLoggedInElements {
+				position: absolute;
+			  	top: 80%;
+			  	left: 71%;
+				  	
+				width: 16.2%;
+			  	
+			  	background-color: rgb(51, 51, 255);
+			  	color: white;
+			  	border: 3px solid black;
+				  	
+				display: none;
+				font-size: 25px;	
+				
+				animation-name: wave-downward;
+			  	animation-duration: 0.4s;
+			  	animation-fill-mode: forwards;
+			}
+				.loggedInElement {
+					width: 100%;
+					display: flex;
+					align-items: center;
+		    		text-align: center;
+		    		justify-content: center;
+		    			
+		    		height: 35px;
+		    		
+		    		border-top: 3px solid black;
+		    		
+					white-space: nowrap;
+					color: white;
+					
+					cursor: pointer;
+					
+					padding-top: 3px;
+					padding-bottom: 3px;
+					
+					
+				}
+		
+	
 	#checkout {
 		width: 11%;
 		height: 60%;
