--- a/pizza-ordedring-app/src/main/resources/templates/admin/adminDeleteItemPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/admin/adminDeleteItemPage.html
@@ -24,6 +24,11 @@
 		<div hidden>
 		    <p th:each="item : ${menuItems}" th:id="'itemName' + ${item.getItemName()}" th:text="${item.getCategory()} + ' ' + ${item.getItemName()}"></p>
 		</div>
+		<!-- Listing users account email. -->
+		<div hidden>
+		    <p id="accIsAdmin" th:text="${userIsAdmin}"></p>
+		    <span id="isUserLoggedin" th:text="${isLoggedIn}" hidden></span>
+		</div>
    		<!-- TopHeader div inserted here from JavaScript (topHeaderHtml.js) -->
 		
    		<div id="pageBody">
@@ -111,6 +116,7 @@
   </div>
 
 	<script src="/javaScript/topHeaderHtml.js"></script>
+	<script  src="/javaScript/clicksAccount.js"></script>
 
 	<script src="/javaScript/showOperatingHours.js"></script>
 	<script src="/javaScript/menuOptions/showPizzas.js"></script>
