--- a/pizza-ordedring-app/src/main/resources/templates/itemPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/itemPage.html
@@ -108,6 +108,18 @@
 	   	
    		</div>
    		
+   		<div id="notLoggedInDiv">
+   			<div id="notLoggedIn">
+   				You are not logged in.
+   				<div id="continueAsGuestDiv">
+   					<span id="continueAsGuestSpan">Continue as guest</span>
+   				</div>
+   				<div id="loginDiv">
+   					<span id="loginSpan">Login</span>
+   				</div>
+   			</div>
+   		</div>
+   		
    		<div id="socialLinksBorder">
 		     	<div id="socialLinks">
 		            <b> 
