--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminOptions.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminOptions.css
@@ -68,6 +68,7 @@
 			height: 450px;
 			
 			display: flex;
+			flex-direction: column;
 		}
 			#editMenuTextDiv {
 				width: 80%;
@@ -80,6 +81,8 @@
 				justify-content: center;
 				align-items: center;
 				text-align: center;
+				
+				padding-top: 50px;
 				
 				margin: auto;
 			}
@@ -134,6 +137,27 @@
 		      	#editItem {
 		      		background-color: rgb(102, 153, 255);
 		      	}
+		      	
+		 #editUsersContainer {
+		 	width: 100%;
+		 	display: flex;
+			justify-content: center;
+			align-items: center;
+		 }
+		   #editUsersDiv {
+		 		width: 27%;
+				
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				
+		        margin-bottom: 10px;
+		        font-size: 50px;
+		 }	
+		      	#editUsers {
+		      		background-color: rgb(255, 153, 102);
+		      	}
+		      	
 		
 		
 		
