--- a/pizza-ordedring-app/src/main/resources/templates/editAccountPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/editAccountPage.html
@@ -115,7 +115,7 @@
 					        
 					        
 					       
-				        	<input type="submit" value="Sign Up">
+				        	<input type="submit" value="Submit">
 				      	</form>
 				      	
 				      </div>
